rollouts-demo/overlays/prod/patch-image.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: rollouts-demo
spec:
  template:
    spec:
      containers:
        - name: app
          image: argoproj/rollouts-demo:blue   # tag par défaut en prod
