rollouts-demo/overlays/prod/patch-ingresses.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rollouts-active
spec:
  rules:
    - host: rollouts-demo.ingcloud.site
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rollouts-preview
spec:
  rules:
    - host: rollouts-demo-preview.ingcloud.site
